# test_project

./: .env.dev  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: workflow.yml
compose/production/django/: Dockerfile
config/: asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
requirements/: base.txt  local.txt  production.txt
scripts/: format.sh  lint.sh
test_project/: apps.py  serializers.py  tasks.py  urls.py  views.py
