[tool.black]
line-length = 108
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | migrations
)/
'''

[tool.isort]
multi_line_output = 3
profile = "black"
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
skip="migrations"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

